turtleart.circletwo.CircleTwo.scala.code
override def run() {
  leveCrayon()
  droite(90),avance(100)
  baisseCrayon()
  cercle(50.0)
  cercle(100.0)
  leveCrayon()
  gauche(90)
  avance(100)
  droite(90)
}